# website

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
app/: __init__.py
app/controllers/: __init__.py  docs.py  main.py
app/helpers/: code_blocks.py  docs.py
app/static/css/: error.css  highlight.css  lib.min.css  main.css  pygments.css
app/static/js/: highlight.pack.js
app/templates/: 404.haml  500.haml  _analytics.haml  _footer.haml  _header.haml  index.haml  layout.haml
app/templates/docs/: _footer.haml  _head.haml  _header.haml  _search.haml  _version.haml  page.haml  tree.haml
app/templates/index/: _async.haml  _nutshell.haml  _orm_aggregation.haml  _orm_relations.haml  _templates.haml
front/: package-lock.json  package.json  tailwind.config.js
front/src/: tailwind.css
helm/: values.yaml
