[tool.poetry]
name = "emmett-website"
version = "0.1.0"
description = ""
authors = ["Giovanni Barillari <giovanni.barillari@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
emmett = "^2.3.0"
emmett-haml = "~1.0"
emmett-sentry = "~0.1"
markdown2 = "~2.3.8"
pygments = "~2.6.1"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
