[tool.poetry]
name = "emmett-website"
version = "0.1.0"
description = ""
authors = ["Giovanni Barillari <gi0baro@d4net.org>"]

[tool.poetry.dependencies]
python = "^3.10"
emmett = "~2.5.2"
emmett-haml = "~1.0"
emmett-sentry = "~0.4.0"
markdown2 = "~2.3.8"
pygments = "~2.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
